# broccoli-programming-language

./: .hindent.yaml  CHANGELOG.md  README.md  fizzBuzz.broc  fizzbuzz.broc  language.cabal  recursiveFizzBuzz.broc  test.broc  test2.broc
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: language-0.1.0.0-inplace.conf  package.cache
dist-newstyle/tmp/environment.-10488/: .ghc.environment.x86_64-linux-8.10.7
dist-newstyle/tmp/environment.-4110041/: .ghc.environment.x86_64-linux-8.10.7
dist-newstyle/tmp/environment.-861378/: .ghc.environment.x86_64-linux-8.10.7
src/: BasicParserFuncs.hs  EquationLexer.hs  ExprLexer.hs  FunctionLexer.hs  IgnoredChars.hs  ModuleParser.hs  ParseTypes.hs  Parser.hs  ParserFuncs.hs  SyntaxParserFuncs.hs  VarLexer.hs
src/Interpreter/: DataTypes.hs  Exceptions.hs  GlobalScope.hs  Interpreter.hs  InterpreterTypes.hs  ScopeFuncs.hs  UsefulFuncs.hs
src/Parser/: BasicParserFuncs.hs  BoolOp.hs  EquationLexer.hs  ExprLexer.hs  ModuleParser.hs  ParseTypes.hs  Parser.hs  SyntaxParserFuncs.hs  VarLexer.hs
