cabal-version:      2.4
name:               language
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sam Hobson
maintainer:         shhobson@proton.me

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Parser,
        BasicParserFuncs,
        SyntaxParserFuncs,
        ExprLexer,
        VarLexer,
        BoolOp,
        ParseTypes,
        ModuleParser,
        IgnoredChars,
        Interpreter,
        InterpreterTypes,
        Exceptions,
        UsefulFuncs,
        GlobalScope,
        ScopeFuncs

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        hashtables,
        containers,
        data-constructors
    hs-source-dirs:   
        src/Parser/,
        src/Interpreter/
    default-language: Haskell2010

executable language
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        language

    hs-source-dirs:   app
    default-language: Haskell2010
